[metadata]
name = moremodels
version = 1.0.6
author = AbdelRahman Yaghi
author_email = abd20200355@std.psut.edu.jo
description = More options to ensemble your models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AbdelRahmanYaghi/moremodels
project_urls =
    Bug Tracker = https://github.com/AbdelRahmanYaghi/moremodels/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src